--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,28 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+:root {
+  --dark: #393939;
+  --primary: #EC4242;
+  --primary-purple: #;
+  --accent: #FEF6F6;
+  --border-red: #FDE8E8;
+  --muted: #787878;
+  --text-color: #333333;
+  --dark-red: #A83636;
+  --white: #FFFFFF;
+  --avatar-red: #FCE8E8;
+  --avatar-purple: #F3E7F9;
+  --chat-bg: #FEF6F6;
+  --chat-bg-purple: #FBF7FD;
+  --logo: linear-gradient(#EC4242, #393939);
+  --primary-purple: #B934F2;
+  --deep-purple: #5A247B;
+  --border-purple: #F5E2FD;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/****************/
+/****UNIVERSAL****/
+/****************/
+
+input {
+  border: none;
+  outline: none;
 }
