working on the media responsiveness of the register route.

--- a/src/index.css
+++ b/src/index.css
@@ -57,7 +57,7 @@ body {
 
 @media screen and (min-width: 1024px) {
   .dash-feature {
-    width: calc(100% - 280px);
+    width: 80%;
     min-height: 100vh;
   }
 }
